--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -7,6 +7,8 @@ package:
 source:
   url: https://github.com/jamesorr/mocsy/archive/v{{ version }}.tar.gz
   sha256: e9ad81dc7ef1e1550e2e4263d958db6a0fba108457f34785b186ccb994c48809
+  patches:
+    - find_fortran.patch
 
 build:
   number: 1000
@@ -32,7 +34,7 @@ about:
   home: https://github.com/jamesorr/mocsy
   license: MIT
   license_file: LICENSE
-  summary: 'Routines to model ocean carbonate system thermodynamics.'
+  summary: 'Routines to model ocean carbonate system thermodynamics'
 
 extra:
   recipe-maintainers:
